Fixes distorted blog header images

--- a/custom/themes/hwtc/sass/partials/_banner.scss
+++ b/custom/themes/hwtc/sass/partials/_banner.scss
@@ -144,6 +144,21 @@
     }
 }
 
+.banner.blog-banner {
+
+
+
+    height: 300px;
+    position: relative;
+    @include at-breakpoint($desktop) {
+        height: 500px;
+    }
+    .bannertext {
+        bottom: 0;
+        position: absolute;
+    }
+}
+
 .bannertext {
 
 
